# Dryopea

./: .gitignore  Cargo.toml  Makefile  PROBLEM.md  PROBLEMS.md  README.md  clippy.toml  rusty-tags.vi  test.json  todo  work
archive/: map.rs
default/: 01_code.gcp  01_code.lav  01_code.loft  01_code.md  02_images.gcp  02_images.lav  02_images.loft  03_text.gcp  03_text.lav
doc/: 00-vs-rust.html  01-keywords.html  02-text.html  03-integer.html  04-boolean.html  05-float.html  06-function.html  07-vector.html  08-struct.html  09-enum.html  10-sorted.html  11-index.html  12-hash.html  13-file.html  14-image.html  15-lexer.html  16-parser.html  17-libraries.html  18-locks.html  19-threading.html  20-logging.html  STDLIB.md  index.html  loft-reference.typ  print.html  search-index.js  stdlib-collections.html  stdlib-environment.html  stdlib-file-system.html  stdlib-math.html  stdlib-output-and-diagnostics.html  stdlib-parallel.html  stdlib-text.html  stdlib-types.html  stdlib.html  style.css  todo.md
example/: show.loft
lib/: code.lav  code.loft  lexer.lav  parser.lav  parser.loft  todo  wall.lav
src/: calc.rs  create.rs  data.rs  database.rs  diagnostics.rs  documentation.rs  external.rs  fill.rs  format.rs  gendoc.rs  generation.rs  hash.rs  inter.rs  interpreter.rs  keys.rs  lexer.rs  lib.rs  log_config.rs  logger.rs  main.rs  parallel.rs  parser.rs  png_store.rs  radix_tree.rs  rb_tree.rs  scopes.rs  stack.rs  state.rs  store.rs  text.rs  tree.rs  typedef.rs  types.rs  variables.rs  vector.rs  wasm.rs  webassembly.rs
tests/: data_structures.rs  dir.rs  enums.rs  expressions.rs  expressions_auto_convert.rs  expressions_call_routine.rs  expressions_compare.rs  file-system.rs  format_strings.rs  formatting.rs  formatting_format_boolean.rs  formatting_format_escaping.rs  formatting_format_expression.rs  formatting_format_float.rs  formatting_format_long.rs  formatting_format_single.rs  formatting_format_text.rs  generated_tests.rs  immutability.rs  issues.rs  log_config.rs  math.rs  objects.rs  sizes.rs  (+9 more)
webassembly/: Cargo.toml  Readme.md
webassembly/src/: external.rs  format.rs  lib.rs  store.rs
webassembly/tests/: structure.gcp  structure.rs
(+543 files in other folders)
