[package]
name = "dryopea"
edition = "2021"
version = "0.1.0"
description = "Dryopea rogue AI, tower defence game"
license = "LGPL-3.0-or-later"
repository = "https://github.com/jjstwerff/Dryopea"
readme = "README.md"

[lib]
name = "dryopea"

[dependencies]
strum = "0.27.0"
strum_macros = "0.27.0"
lazy_static = "1.4.0"
mmap-storage = "0.10.0"
flexi_logger = "0.29.8"
log = "0.4.21"
stdext = "0.3.3"
clap = { version = "4.5.4", features = ["derive"] }

# serde = { version = "1", features = ["derive"] }
# serde_json = "1.0.91"
# eq-float = "0.1.0"
png = "0.17.13"
rand = "0.9.0"
dirs = "6.0.0"

[[bin]]
name = "main"
path = "src/main.rs"
