[package]
name = "dryopea"
edition = "2021"
version = "0.1.0"
description = "Dryopea rogue AI, tower defence game"
license = "LGPL-3.0-or-later"
repository = "https://github.com/jjstwerff/Dryopea"
readme = "README.md"

[lib]
name = "dryopea"

[dependencies]
mmap-storage = "0.10.0"
stdext = "0.3.3"
png = "0.17.13"
rand = "0.9.1"
dirs = "6.0.0"

[[bin]]
name = "lavition"
path = "src/main.rs"
