[package]
name = "scriptlib"
version = "0.1.0"
authors = ["Jurjen Stellingwerff <j.stellingwerff@gmail.com>"]
description = "The library for Dryopea script"
license = "LGPL-3.0-or-later"
repository = "https://github.com/jjstwerff/Dryopea"
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
